Some rules for shooting.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -35,8 +35,10 @@
 \end{abstractiontable}
 
 \begin{abstractiontable}{Стрелба}
+стрелба                  &          &                &                                                &        \\
+автоматична стрелба      &          &                &                                                &        \\
+прицелване               &          &                &                                                &        \\
 прицелена стрелба        &          &                &                                                &        \\
-единична стрелба         &          &                &                                                &        \\
 автоматична стрелба      &          &                &                                                &        \\
 инкремент на обсег       & обсег    & обсег          &                                                &        \\
 \end{abstractiontable}
@@ -52,6 +54,12 @@
 \begin{abstractiontable}{Морал}
                          &          & морал          &                                                &  \\
 \end{abstractiontable}
+
+
+\subsection{Автоматично оръже}
+Автоматичните оръжия са способни да произведат повече от един изстрел за ход.
+Хвърлянето за атака е едно.
+Всеки изстрел след първия има <откат> точки по-малко атака, натрупвайки се.
 
 
 \subsection{Байнд}
@@ -191,19 +199,41 @@
 Разстоянието, на което стрелящото оръжие може да бъде прицелено и нанесе щети.
 
 
-\subsection{Единична стрелба}
-Тук спадат всички далечни оръжия без автоматичен режим на стрелба. \\
-Защитата на движеща се цел се равнява на нейната ловкост.  \\
-След преминаване оптималния обсег на оръжието, -5 атака.  \\
-Това наказание се натрупва до стигане максилния обсег на оръжието.  \\
-Прицелване повишава атаката с по една точка на ход.  \\
-Прицелване в рамките на максимум <базов показател на умението> хода.
-\subsection{Автоматични оръжия}
-Автоматичните оръжия са способни да произведат повече от един изстрел за ход.
-Хвърлянето за атака е едно.
-Всеки изстрел след първия има <откат> точки по-малко атака, натрупвайки се.
+\subsection{Прицелване}
+Това действие е възможно, когато се ползва изцяло стрелящо оръжие като арбалет или пушка, но не и лък или ръчна граната.
+То може да бъде извъшено толкова пъти, колкото е (боравене) със съответното оръжие.
+Всеки ход, прекаран в прицелване, добавя +1 модификация.
+След това целта може да бъде следена, запазвайки модификацията, докато нещо съществено се промени: влезе в автомобил, легне, затича се.
+
+
+\subsection{Стрелба}
+Тук спадат всички далечни оръжия без автоматичен режим на стрелба като лък, арбалет, пистолет и дори франциска или просто камък.
+\\
+\\
+\rowcolors{1}{white}{lightgray}
+\begin{tabular}{l | l | l | l }
+Ситуация         & Трудност & Модификация & Бележки                                                    \\
+неподвижен човек & 0        & -           &                                                            \\
+следящ оръжието  & Ловкост  & -           & струва цял ход                                             \\
+тичане           & -        & +5          &                                                            \\
+в ръкопашен бой  & -        & +5          & при пропуск се хвърля срещу останалите учасници в клането  \\
+\end{tabular}
+\\
+
+
 \subsubsection{Прикритие}
-Прикриване зад дърво: 10
+Прикритие от ръкопашни атаки, като зад тезгях или зад ъгъла, дава (боравене+5) за целите на отбрана и на двамата опоненти.
+\\
+\\
+Когато става дума за стрелба, концепцията е далеч по-важна и ефективна.
+Следната модификация се вади от боравенето на враг, стрелящ по прикрития персонаж.
+\\
+\rowcolors{1}{white}{lightgray}
+\begin{tabular}{l | l | p{10cm}}
+Ситуация        & Модификация & Бележки \\
+полу-прикритие  & -5          & поне половината тяло е скрито, примерно зад крепостна стена или заложник \\
+пълно прикритие & -10         & примерно зад ъгъла; атаки търпят -5 наказание                            \\
+\end{tabular}
 
 
 \subsection{Щм, Щс, Щт}
