Removed now unnecery section Combat Mechanics.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -23,15 +23,15 @@
 \end{abstractiontable}
 
 \begin{abstractiontable}{Ръкопашен сблъсък}
-байнд                    &          &                &                                                &        \\
-дистанция                &          &                &                                                &        \\
-джаб                     &          &                &                                                &        \\
-финт                     &          &                &                                                &        \\
-прицелана атака          &          &                &                                                &        \\
-ръкопашно оръжие         &          &                &                                                &        \\
-боравене                 & боравене &                &                                                &        \\
-Щм, Щс, Щт               & Щ        &                &                                                &        \\
-                         &          & нападение      & нападение                                      & бонус  \\
+байнд                    &                  &                &                                                &        \\
+дистанция                &                  &                &                                                &        \\
+джаб                     &                  &                &                                                &        \\
+финт                     &                  &                &                                                &        \\
+прицелана атака          &                  &                &                                                &        \\
+ръкопашно оръжие         & ръкопашно оръжие &                &                                                &        \\
+боравене                 & боравене         &                &                                                &        \\
+Щм, Щс, Щт               & Щ                &                &                                                &        \\
+                         &                  & нападение      & нападение                                      & бонус  \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Стрелба}
@@ -53,6 +53,11 @@
 
 \begin{abstractiontable}{Морал}
                          &          & морал          &                                                &  \\
+\end{abstractiontable}
+
+\begin{abstractiontable}{Отбрана}
+Покритие                 &          &                &                                                &  \\
+Абсорбация               &          &                &                                                &  \\
 \end{abstractiontable}
 
 
@@ -130,6 +135,13 @@
 За стрелящи оръжия.
 Най-голямото разстояние, на което стрелецът може да се прицели с лекота.
 През всеки инкремент метра, атаките търпят по -5 наказание.
+
+
+\subsection{Многобой}
+Това е ситуация, в която един войн е в ръкопашен бой с няколко врага.
+Тогава той има право само на една отбрана на ход като париране или отбягване, и има трудност да бъде уцелен 0 срещу всички останали нападение.
+Алтернативно, той може да отдели някои точки от основната си отбрана за последващи такива.
+Примерно мечоносец с боравене 8 може да реши да се предпази от двамата си опоненти с (4 + d*), наместо от първия с (8 + d*) и от втория с (d*).
 
 
 \subsection{Прицелена атака}
@@ -311,18 +323,6 @@
 
 Общо максимум: 15
 
-\subsection{Механика}
-Нека си дойдем на думата.
-Удар или група удари (едно ръкопашно действие) се групират в обща цел – нападение или отбрана.
-Нападащият добавя d6* към боравенето си и сравнява резултата с боравене на отбраняващият се, който се отбранява с всички средства налични – отбягва, парира.
-Подробности:
-\begin{itemize}
-\item[-]{отбраняване само чрез отбягване носи наказание от -5, но добавя +5 на боравене при атаки срещу тази конкретна цел на следващия ход}
-\item[-]{отбраняване от втори нападател търпи наказание от -5; от трети общо -10 и т.н.}
-\end{itemize}
-
-Ако нападателя има повече, съществени удари са достигнали целта.
-Ако нападателя има повече от боравене на защитника + пазене на броните му, е поразена небронирана област.
 
 \subsection{Специални правила}
 \begin{center}
