More additions to the detailed combat system.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -40,6 +40,7 @@
 прицелване               &          &                &                                                &        \\
 прицелена стрелба        &          &                &                                                &        \\
 автоматична стрелба      &          &                &                                                &        \\
+лесни оръжия             &          &                &                                                &        \\
 инкремент на обсег       & обсег    & обсег          &                                                &        \\
 \end{abstractiontable}
 
@@ -49,6 +50,7 @@
 
 \begin{abstractiontable}{Придвижване}
                          &          &                & придвижвне на армия                            &  \\
+езда, шофиране           &          &                & придвижвне на армия                            &  \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Морал}
@@ -115,6 +117,24 @@
 Ползва (боравене+5), но причинява (Щ/2).
 
 
+\subsection{Езда, Шофиране}
+Ползване на умения от гърба на кон е ограничено до нивото на езда.
+Например при боравене с копие 6 и езда 4, нападението е 4 + *d.
+За шофиране се ползва нивото на умение на шофьора.
+Той обаче ако ползва някакви умения (примерно да стреля през прозореца), вади нивото на умението от шофирането си.
+\\
+\\
+Ръкопашни атаки от и по галопиращ конник са с двойни щети.
+Цялото тяло на конник, изключае краката и коня, са на 1 категория дистанция по-далеч от пешаци.
+Съответно краката на пешаци са на една категория по-далеч от конник.
+\\
+\\
+Стрелба от галопиращ кон, освен горното ограничение, търпи (модификация-10+езда), която модификация не може да е положителна.
+\\
+\\
+Друго приложение на умела езда е бързо придвижване през труден терен или по улици със завои.
+
+
 \subsection{ЖТ}
 Жизнените точки са равни на Сила.
 Ако бъдат бъдат редуцирани до или под 0, съществува опасност от безсъзнание или смърт.
@@ -135,6 +155,12 @@
 За стрелящи оръжия.
 Най-голямото разстояние, на което стрелецът може да се прицели с лекота.
 През всеки инкремент метра, атаките търпят по -5 наказание.
+
+
+\subsection{Лесни оръжия}
+Някои оръжия, като арбалетът или повечето огнестрелни оръжия, могат да бъдат ползвани след само ден тренировки.
+С тях може да бъде нападано ползвайки Ловкост, наместо боравене.
+Твоа важи само за нападение - боравене е нужно за Прицелена стрелба, ремонтиране, ползване ранен и така нататък други действия.
 
 
 \subsection{Многобой}
