[combat] Further refactoring of the rules. Removed a too generic section.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -18,30 +18,32 @@
 { \end{tabular} }
 
 \begin{abstractiontable}{Петте нива на абстркция}
-Дуел                     & Схватка  & Битка          & Стратегия                                       & Схематично  \\
-максимална реалистичност & a la DnD & a la Total War & решава съдбата на армии с едно хвърляне на зар & изчислително леко и универсално  \\
+Детайлно                  & Индивидуално & Строево        & Стратегическо                                   & Опростено  \\
+максимална реалистичност  & a la DnD     & a la Total War & решава съдбата на армии с едно хвърляне на зар  & изчислително леко и универсално  \\
+2-6 участници в схватката & 2-20         & 20-10000       & 20-много                                        & 2-20  \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Ръкопашен сблъсък}
-байнд                    &                  &                &                                                &        \\
-дистанция                &                  &                &                                                &        \\
-джаб                     &                  &                &                                                &        \\
-финт                     &                  &                &                                                &        \\
-прицелана атака          &                  &                &                                                &        \\
-ръкопашно оръжие         & ръкопашно оръжие &                &                                                &        \\
-боравене                 & боравене         &                &                                                &        \\
-Щм, Щс, Щт               & Щ                &                &                                                &        \\
-                         &                  & нападение      & нападение                                      & бонус  \\
+байнд                    &                    &                &                                                &        \\
+боравене                 & боравене           &                &                                                &        \\
+дистанция                &                    &                &                                                &        \\
+джаб                     &                    &                &                                                &        \\
+удар по крайник          &                    &                &                                                &        \\
+финт                     &                    &                &                                                &        \\
+изисквана сила           & изисквана сила     &                &                                                &        \\
+свойства на оръжие       & свойства на оръжие &                &                                                &        \\
+Щм, Щс, Щт               & Щ                  &                &                                                &        \\
+                         &                    & нападение      & ???                                            & бонус  \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Стрелба}
-стрелба                  &          &                &                                                &        \\
-автоматична стрелба      &          &                &                                                &        \\
-прицелване               &          &                &                                                &        \\
-прицелена стрелба        &          &                &                                                &        \\
-автоматична стрелба      &          &                &                                                &        \\
-лесни оръжия             &          &                &                                                &        \\
-инкремент на обсег       & обсег    & обсег          &                                                &        \\
+стрелба                  &                    &                    &                                                &        \\
+автоматична стрелба      &                    &                    &                                                &        \\
+прицелване               &                    &                    &                                                &        \\
+стрелба по крайник       &                    &                    &                                                &        \\
+лесни оръжия             &                    &                    &                                                &        \\
+инкремент на обсег       & инкремент на обсег & инкремент на обсег &                                                &        \\
+                         &                    & обстрел            & ???                                            &        \\
 \end{abstractiontable}
 
 \begin{abstractiontable}{Ресурси}
@@ -58,12 +60,13 @@
 \end{abstractiontable}
 
 \begin{abstractiontable}{Отбрана}
-Покритие                 &          &                &                                                &  \\
-Абсорбация               &          &                &                                                &  \\
+Покритие                 & общо покритие &                &                                                &  \\
+Абсорбация               &               &                &                                                &  \\
+                         &               & отбрана        &                                                &  \\
 \end{abstractiontable}
 
 
-\subsection{Автоматично оръже}
+\subsection{Автоматична стрелба}
 Автоматичните оръжия са способни да произведат повече от един изстрел за ход.
 Хвърлянето за атака е едно.
 Всеки изстрел след първия има <откат> точки по-малко атака, натрупвайки се.
@@ -88,20 +91,19 @@
 
 
 \subsection{Дистанция}
-\begin{multicols}{2}
-\begin{itemize}
+\begin{enumerate}
 \item{директна (борба)}
 \item{близка (нож, невъоръжен, къс меч)}
 \item{средна (меч 80см, повечето оръжия за една ръка)}
 \item{дълга (дълъг меч, копие, двуръчен меч)}
 \item{отдалечена (пика)}
 \item{извън ръкопашен обхват (стрелящи неща)}
-\end{itemize}
+\end{enumerate}
 Инициатива за първия удар има този с по-дълго оръжие (очевидно).
 Извън оптималната си дистанция, оръжията са на -5 атака и половин щети.
 Придвижване между дистанции се извършва след успешно хвърляне (независимо нападение или защита).
 Придвижването е или една категория в произволна посока или произволен брой категории, без да се преминава през заплашвани от някой враг дистанции.
-\end{multicols}
+\\
 \underline{Пример}:
 \emph{Пешо, с копие и нож, напада Жоро, с меч.
 Пешо връхлита и напада с копието.
@@ -151,6 +153,12 @@
 % фактори - статистики на хората, брой коне, размер на обоза
 
 
+\subsection{Изисквана сила}
+Това е обсегът на Сила на героят, в който оръжието е ефективно.
+Ако персонажът има по-малко от минималната сила, разликата става наказание върху боравенето с това оръжие.
+От друга страна, Сила, по-висока от максималната, не допринася за по-високи щети.
+
+
 \subsection{Инкремент на обсег}
 За стрелящи оръжия.
 Най-голямото разстояние, на което стрелецът може да се прицели с лекота.
@@ -170,6 +178,26 @@
 Примерно мечоносец с боравене 8 може да реши да се предпази от двамата си опоненти с (4 + d*), наместо от първия с (8 + d*) и от втория с (d*).
 
 
+\subsection{Нападение на строй}
+нападение = (боравене + средни Щ (+ 5 за конник)) / 2
+
+
+\subsection{Обстрел - строеви}
+обстрел = (боравене + средни Щ) / 2
+
+
+\subsection{Обща абсорбация}
+обща абсорбация = (аб + общо покритие) / 2
+
+
+\subsection{Общо покритие}
+общо покритие = (покритие глава + покритие торс + покритие ръце + покритие крака)/5
+
+
+\subsection{Отбрана на строй}
+отбрана = (боравене + обща абсорбация)
+
+
 \subsection{Прицелена атака}
 Ръкопашна атака не е насочена към 'врага', а към конкретна част от тялото му.
 \\
@@ -182,7 +210,7 @@
 \end{tabular}
 
 
-\subsection{Прицелена стрелба}
+\subsection{Стрелба по крайник}
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{l | l | l | l }
 глава & модификация -5  \\
@@ -233,10 +261,6 @@
 %\subsection{Навесна стрелба}
 
 
-\subsection{Обсег}
-Разстоянието, на което стрелящото оръжие може да бъде прицелено и нанесе щети.
-
-
 \subsection{Прицелване}
 Това действие е възможно, когато се ползва изцяло стрелящо оръжие като арбалет или пушка, но не и лък или ръчна граната.
 То може да бъде извъшено толкова пъти, колкото е (боравене) със съответното оръжие.
@@ -274,6 +298,27 @@
 \end{tabular}
 
 
+\subsubsection{Свойства на оръжие}
+\begin{itemize}
+\item{\textit{повратливост} (обикновено мечове; покрива всички по-близки дистанции от максимлната)}
+\item{\textit{бронебойност I} (чукове или леки клинове, като стрели и копия; намаля абсорбацията на половина)}
+\item{\textit{бронебойност II} (клиновидни, тежки остриета; намаля абсорбацията на $\frac1 4$)}
+\item{\textit{трудно за вадене} (не може да се извади от пробита проня по време на битка; не може да се извади от небронирана плът, ако зарът за щета е бил положителен; при вадене лечитеслтво с/у щетите; ако не успее се  нанасят още толкова щети, колкото първоначално)}
+\item{\textit{поваляне} (обикновено алебарди; наместо щети, атаката може да бъде обявена, че поваля опонента. Ако целта е конник в качествено бойно седло, -5 на атака)}
+\item{\textit{обезоръжаване} (обикновено меч или щит; при успешна защита има шанс оръжието на врага да е уловено в комплексния гард или шипове на "бос"a на щит)}
+\end{itemize}
+
+
+\subsection{Удар по крайник}
+\rowcolors{1}{white}{lightgray}
+\begin{tabular}{l | l | l | l }
+глава & -  \\
+торс  & -  \\
+ръка  & -  \\
+крак  & -  \\
+\end{tabular}
+
+
 \subsection{Щм, Щс, Щт}
 Мушакщи атаки са бързи, но оставят нападателя открит за контраатака(боравене-5 следващия ход).
 Причиняват високa смъртност(Щ*2).
@@ -296,35 +341,50 @@
 Иначе се получава (боравене-5).
 
 
-\subsection{Ръкопашно Оръжие}
-\begin{itemize}
-\item {\bfСила} \\
-Това е обсегът на Сила на героят, в който оръжието е ефективно.
-Ако персонажът има по-малко от минималната сила, разликата става наказание върху боравенето с това оръжие.
-От друга страна, Сила, по-висока от максималната, не допринася за по-високи щети.
-\item {\bfЩети} \\
-Условно наричаме “ниски” щети от малки оръжия за една ръка, “средни” - тези на по-големите
-едноръчни оръжия и “високи” тези на повечето двуръчни оръжия.
-Самото оръжие може да има бонус или наказание върху щетите си, редом с качествата на оръжието.
-\item {\bfОбсег} \\
-Обсегът на оръжията има различен смисъл за ръкопашни и далечни оръжия.
-При ръкопашните оръжия, това е оптималната дистанция.
-На всички по-близки дистанции оръжието има модификация от -5 боравене и половин щети.
+\subsection{Щети}
+Щети от попадение с ръкопано оръжие зависят от Сила на ползвателя му според следната таблица.
+Конктетното оръжие може да има модификации върху тази стойност.
 \\
-За далечни оръжия, обсегът е максималното разстрояние, на което лесно може да се улучи цел.
-На по-голямо от това разстояние атаката е с -5 наказание, на по-голямо от два пъти това разстояние става -10 и на от три до четири пъти това разстояние е на -15.
-Чести стойности за обсег са (Сила/2) – метателен нож, (Сила) – метателно копие, (Сила х 2) – лък.
-\end{itemize}
+Стрелящи оръжия нанасят щети спрямо някаква фиктивна "Сила" на оръжието.
+\\
+\begin{wraptable}[24]{l}{5.5cm}
+\rowcolors{1}{white}{lightgray}
+\begin{tabular}{l | c | c | c}
+     & ниски & средни & високи  \\
+Сила & *1/2  & *2/3   & *1      \\
+1  & d-3  & d-3  & d-2   \\
+2  & d-3  & d-2  & d-1   \\
+3  & d-2  & d-1  & d-1   \\
+4  & d-2  & d-1  & d+1   \\
+5  & d-1  & d    & d+2   \\
+6  & d-1  & d    & d+3   \\
+7  & d    & d+1  & 2d    \\
+8  & d+1  & d+2  & 2d+1  \\
+9  & d+1  & 2d-1 & 2d+2  \\
+10 & d+2  & 2d   & 3d    \\
+11 & d+2  & 2d   & 3d+1  \\
+12 & 2d-1 & 2d+1 & 3d+2  \\
+13 & 2d-1 & 2d+2 & 3d+3  \\
+14 & 2d   & 3d-1 & 4d    \\
+15 & 2d+1 & 3d   & 4d+1  \\
+16 & 2d+1 & 3d+1 & 4d+2  \\
+17 & 2d+2 & 3d+1 & 5d    \\
+18 & 2d+2 & 3d+2 & 5d+1  \\
+19 & 3d-1 & 4d-1 & 5d+2  \\
+20 & 3d-1 & 4d   & 5d+3  \\
+21 & 3d   & 4d   & 6d    \\
+22 & 3d+1 & 4d+1 & 6d+1  \\
+23 & 3d+1 & 4d+2 & 6d+2  \\
+24 & 3d+2 & 5d-1 & 7d    \\
+25 & 3d+2 & 6d   & 7d+1  \\
+26 & 4d-1 & 5d   & 7d+2  \\
+27 & 4d-1 & 5d+1 & 7d+3  \\
+28 & 4d   & 5d+2 & 8d    \\
+29 & 4d+1 & 6d-1 & 8d+1  \\
+30 & 4d+1 & 6d   & 8d+2
+\end{tabular}
+\end{wraptable}
 
-Също така, оръжията могат да имат някои от следните свойства.
-\begin{enumerate}
-\item{\textit{повратливост} (обикновено мечове; покрива всички по-близки дистанции от максимлната)}
-\item{\textit{бронебойност I} (чукове или леки клинове, като стрели и копия; намаля абсорбацията на половина)}
-\item{\textit{бронебойност II} (клиновидни, тежки остриета; намаля абсорбацията на $\frac1 4$)}
-\item{\textit{трудно за вадене} (не може да се извади от пробита проня по време на битка; не може да се извади от небронирана плът, ако зарът за щета е бил положителен; при вадене лечитеслтво с/у щетите; ако не успее се  нанасят още толкова щети, колкото първоначално)}
-\item{\textit{поваляне} (обикновено алебарди; наместо щети, атаката може да бъде обявена, че поваля опонента. Ако целта е конник в качествено бойно седло, -5 на атака)}
-\item{\textit{обезоръжаване} (обикновено меч или щит; при успешна защита има шанс оръжието на врага да е уловено в комплексния гард или шипове на "бос"a на щит)}
-\end{enumerate}
 
 \subsection{Брони}
 Защитната стойност на броните се получава от това каква част от тялото е общо покрита.
@@ -376,43 +436,6 @@
 \item[-]{Дървените оръжия и щитове имат здравина 15, а стоманените 30. Това обикновено няма значерние, но силни или бронебойни атаки може да преодолеят успешно блокиране.}
 \end{itemize}
 
-\subsection{Таблица щети}
-\begin{wraptable}[24]{l}{5.5cm}
-\rowcolors{1}{white}{lightgray}
-\begin{tabular}{l | c | c | c}
-Сила & *1/2 & *2/3 & *1  \\
-1  & d-3  & d-3  & d-2   \\
-2  & d-3  & d-2  & d-1   \\
-3  & d-2  & d-1  & d-1   \\
-4  & d-2  & d-1  & d+1   \\
-5  & d-1  & d    & d+2   \\
-6  & d-1  & d    & d+3   \\
-7  & d    & d+1  & 2d    \\
-8  & d+1  & d+2  & 2d+1  \\
-9  & d+1  & 2d-1 & 2d+2  \\
-10 & d+2  & 2d   & 3d    \\
-11 & d+2  & 2d   & 3d+1  \\
-12 & 2d-1 & 2d+1 & 3d+2  \\
-13 & 2d-1 & 2d+2 & 3d+3  \\
-14 & 2d   & 3d-1 & 4d    \\
-15 & 2d+1 & 3d   & 4d+1  \\
-16 & 2d+1 & 3d+1 & 4d+2  \\
-17 & 2d+2 & 3d+1 & 5d    \\
-18 & 2d+2 & 3d+2 & 5d+1  \\
-19 & 3d-1 & 4d-1 & 5d+2  \\
-20 & 3d-1 & 4d   & 5d+3  \\
-21 & 3d   & 4d   & 6d    \\
-22 & 3d+1 & 4d+1 & 6d+1  \\
-23 & 3d+1 & 4d+2 & 6d+2  \\
-24 & 3d+2 & 5d-1 & 7d    \\
-25 & 3d+2 & 6d   & 7d+1  \\
-26 & 4d-1 & 5d   & 7d+2  \\
-27 & 4d-1 & 5d+1 & 7d+3  \\
-28 & 4d   & 5d+2 & 8d    \\
-29 & 4d+1 & 6d-1 & 8d+1  \\
-30 & 4d+1 & 6d   & 8d+2
-\end{tabular}
-\end{wraptable}
 
 \subsection{Масови сражения}
 Групи от съюзници могат да бъдат събирани в "строй".
